resources/public/lp-static/css/main.css
@import url('main-blessed1.css?z=1453876722956');

/* line 53, ../../../private/common-html/sass/partials/_conversation.scss */
.comment:after {
  position: absolute;
  content: " ";
  display: block;
  bottom: -23px;
  left: 24px;
  width: 0;
  height: 0;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-top: 24px solid #d8f0fa;
}
/* line 65, ../../../private/common-html/sass/partials/_conversation.scss */
.comment .attachment-details a, .comment .new-attachment-version-details a {
  color: #595959;
}
/* line 69, ../../../private/common-html/sass/partials/_conversation.scss */
.comment .deleted-attachment {
  font-style: italic;
}
/* line 74, ../../../private/common-html/sass/partials/_conversation.scss */
.comment.attachment-comment:after {
  border-top: 24px solid #e9e9e9;
}
/* line 78, ../../../private/common-html/sass/partials/_conversation.scss */
.comment .comment-text {
  position: relative;
  display: inline-block;
  width: 100%;
}
/* line 83, ../../../private/common-html/sass/partials/_conversation.scss */
.comment.authority-comment {
  background-color: #9afda2;
}
/* line 85, ../../../private/common-html/sass/partials/_conversation.scss */
.comment.authority-comment:after {
  position: absolute;
  content: " ";
  display: block;
  bottom: -23px;
  left: auto;
  right: 24px;
  width: 0;
  height: 0;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-top: 24px solid #9afda2;
}
/* line 98, ../../../private/common-html/sass/partials/_conversation.scss */
.comment.authority-comment .comment-party {
  position: relative;
}
/* line 100, ../../../private/common-html/sass/partials/_conversation.scss */
.comment.authority-comment .comment-party:after {
  display: none;
}
/* line 105, ../../../private/common-html/sass/partials/_conversation.scss */
.comment.authority-comment.attachment-comment:after {
  border-top: 24px solid #e9e9e9;
}

/* line 112, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-for-me {
  border: solid 2px #f39129;
}

/* line 117, ../../../private/common-html/sass/partials/_conversation.scss */
.conversation div {
  vertical-align: top;
}

/* line 122, ../../../private/common-html/sass/partials/_conversation.scss */
.conversation .attachment-comment {
  vertical-align: top;
  background-color: #e9e9e9;
}

/* line 127, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-controls {
  display: inline-block;
  margin-left: 24px;
}
/* line 131, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-controls .comment-request {
  display: inline-block;
  margin-left: 24px;
}
/* line 134, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-controls .comment-request label {
  display: block;
}
/* line 137, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-controls .comment-request select {
  display: block;
}
/* line 142, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-controls .mark-answered {
  margin-left: 24px;
  display: inline-block;
}
/* line 145, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-controls .mark-answered label, .comment-controls .mark-answered input {
  display: inline;
}

/* line 152, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-toggle {
  margin-bottom: 8px;
}

/* line 156, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-message {
  white-space: pre-line;
}

/* line 248, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble {
  position: relative;
  color: #333333;
  background: #f6f6f6;
  width: 100%;
  border-radius: 2px;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 5px;
  padding-top: 5px;
  margin-bottom: 15px;
  border: 1px solid #bbbbbb;
}
/* line 177, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble:after, .comment-bubble:before {
  top: 100%;
  left: 5%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}
/* line 188, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble:after, .comment-bubble:before {
  left: 5%;
}
/* line 191, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble:after {
  border-color: rgba(246, 246, 246, 0);
  border-top-color: #f6f6f6;
  border-width: 10px;
  margin-left: -10px;
}
/* line 197, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble:before {
  border-color: rgba(187, 187, 187, 0);
  border-top-color: #bbbbbb;
  border-width: 11px;
  margin-left: -11px;
}
/* line 203, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header {
  border-bottom: 2px solid #bbbbbb;
  margin-bottom: 5px;
  padding-bottom: 5px;
  width: 100%;
  overflow-y: hidden;
  vertical-align: top;
}
/* line 210, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header .sender {
  float: left;
  font-weight: bold;
}
/* line 213, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header .sender .role {
  text-transform: lowercase;
}
/* line 215, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header .sender .role:before {
  content: "(";
}
/* line 218, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header .sender .role:after {
  content: ")";
}
/* line 223, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header .sender .to:before {
  margin-left: 12px;
  margin-right: 12px;
  content: "→";
}
/* line 230, ../../../private/common-html/sass/partials/_conversation.scss */
.comment-bubble .header .timestamp {
  float: right;
}
/* ... */

